docs/envoy/v1.6.0/_sources/api-v2/api/v2/core/grpc_service.proto.rst.txt
.. _envoy_api_file_envoy/api/v2/core/grpc_service.proto:

gRPC services
=============


.. _envoy_api_msg_core.GrpcService:

core.GrpcService
----------------

`[core.GrpcService proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/grpc_service.proto#L19>`_

gRPC service configuration. This is used by :ref:`ApiConfigSource
<envoy_api_msg_core.ApiConfigSource>` and filter configurations.


.. WARNING::
 This message type has :ref:`draft <config_overview_v2_status>` status.
.. code-block:: json

  {
    "envoy_grpc": "{...}",
    "google_grpc": "{...}",
    "timeout": "{...}",
    "credentials": [],
    "initial_metadata": []
  }

.. _envoy_api_field_core.GrpcService.envoy_grpc:

envoy_grpc
  (:ref:`core.GrpcService.EnvoyGrpc <envoy_api_msg_core.GrpcService.EnvoyGrpc>`) Envoy's in-built gRPC client.
  See the :ref:`gRPC services overview <arch_overview_grpc_services>`
  documentation for discussion on gRPC client selection.
  
  
  Precisely one of :ref:`envoy_grpc <envoy_api_field_core.GrpcService.envoy_grpc>`, :ref:`google_grpc <envoy_api_field_core.GrpcService.google_grpc>` must be set.
  
.. _envoy_api_field_core.GrpcService.google_grpc:

google_grpc
  (:ref:`core.GrpcService.GoogleGrpc <envoy_api_msg_core.GrpcService.GoogleGrpc>`) `Google C++ gRPC client <https://github.com/grpc/grpc>`_
  See the :ref:`gRPC services overview <arch_overview_grpc_services>`
  documentation for discussion on gRPC client selection.
  
  
  Precisely one of :ref:`envoy_grpc <envoy_api_field_core.GrpcService.envoy_grpc>`, :ref:`google_grpc <envoy_api_field_core.GrpcService.google_grpc>` must be set.
  
.. _envoy_api_field_core.GrpcService.timeout:

timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The timeout for the gRPC request. This is the timeout for a specific
  request.
  
  
.. _envoy_api_field_core.GrpcService.credentials:

credentials
  (:ref:`core.GrpcService.Credentials <envoy_api_msg_core.GrpcService.Credentials>`) A set of credentials that will be composed to form the `channel credentials
  <https://grpc.io/docs/guides/auth.html#credential-types>`_.
  
  
.. _envoy_api_field_core.GrpcService.initial_metadata:

initial_metadata
  (:ref:`core.HeaderValue <envoy_api_msg_core.HeaderValue>`) Additional metadata to include in streams initiated to the GrpcService.
  This can be used for scenarios in which additional ad hoc authorization
  headers (e.g. `x-foo-bar: baz-key`) are to be injected.
  
  
.. _envoy_api_msg_core.GrpcService.EnvoyGrpc:

core.GrpcService.EnvoyGrpc
--------------------------

`[core.GrpcService.EnvoyGrpc proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/grpc_service.proto#L20>`_



.. WARNING::
 This message type has :ref:`draft <config_overview_v2_status>` status.
.. code-block:: json

  {
    "cluster_name": "..."
  }

.. _envoy_api_field_core.GrpcService.EnvoyGrpc.cluster_name:

cluster_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the upstream gRPC cluster. SSL credentials will be supplied
  in the :ref:`Cluster <envoy_api_msg_Cluster>` :ref:`tls_context
  <envoy_api_field_Cluster.tls_context>`.
  
  


.. _envoy_api_msg_core.GrpcService.GoogleGrpc:

core.GrpcService.GoogleGrpc
---------------------------

`[core.GrpcService.GoogleGrpc proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/grpc_service.proto#L27>`_



.. WARNING::
 This message type has :ref:`draft <config_overview_v2_status>` status.
.. code-block:: json

  {
    "target_uri": "...",
    "ssl_credentials": "{...}",
    "stat_prefix": "...",
    "config": "{...}"
  }

.. _envoy_api_field_core.GrpcService.GoogleGrpc.target_uri:

target_uri
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The target URI when using the `Google C++ gRPC client
  <https://github.com/grpc/grpc>`_. SSL credentials will be supplied in
  :ref:`credentials <envoy_api_field_core.GrpcService.credentials>`.
  
  
.. _envoy_api_field_core.GrpcService.GoogleGrpc.ssl_credentials:

ssl_credentials
  (:ref:`core.GrpcService.GoogleGrpc.SslCredentials <envoy_api_msg_core.GrpcService.GoogleGrpc.SslCredentials>`) 
  
.. _envoy_api_field_core.GrpcService.GoogleGrpc.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting statistics for the gRPC
  service.
  
  .. csv-table::
     :header: Name, Type, Description
     :widths: 1, 1, 2
  
     streams_total, Counter, Total number of streams opened
     streams_closed_<gRPC status code>, Counter, Total streams closed with <gRPC status code>
  
  
.. _envoy_api_field_core.GrpcService.GoogleGrpc.config:

config
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Additional configuration for site-specific customizations of the Google
  gRPC library.
  
  
.. _envoy_api_msg_core.GrpcService.GoogleGrpc.SslCredentials:

core.GrpcService.GoogleGrpc.SslCredentials
------------------------------------------

`[core.GrpcService.GoogleGrpc.SslCredentials proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/grpc_service.proto#L34>`_

See https://grpc.io/grpc/cpp/structgrpc_1_1_ssl_credentials_options.html.


.. WARNING::
 This message type has :ref:`draft <config_overview_v2_status>` status.
.. code-block:: json

  {
    "root_certs": "{...}",
    "private_key": "{...}",
    "cert_chain": "{...}"
  }

.. _envoy_api_field_core.GrpcService.GoogleGrpc.SslCredentials.root_certs:

root_certs
  (:ref:`core.DataSource <envoy_api_msg_core.DataSource>`) PEM encoded server root certificates.
  
  
.. _envoy_api_field_core.GrpcService.GoogleGrpc.SslCredentials.private_key:

private_key
  (:ref:`core.DataSource <envoy_api_msg_core.DataSource>`) PEM encoded client private key.
  
  
.. _envoy_api_field_core.GrpcService.GoogleGrpc.SslCredentials.cert_chain:

cert_chain
  (:ref:`core.DataSource <envoy_api_msg_core.DataSource>`) PEM encoded client certificate chain.
  
  



.. _envoy_api_msg_core.GrpcService.Credentials:

core.GrpcService.Credentials
----------------------------

`[core.GrpcService.Credentials proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/grpc_service.proto#L86>`_

gRPC credentials as described at
https://grpc.io/docs/guides/auth.html#credential-types.

.. note::

  Credentials are only currently implemented for the Google gRPC client.


.. WARNING::
 This message type has :ref:`draft <config_overview_v2_status>` status.
.. code-block:: json

  {
    "access_token": "..."
  }

.. _envoy_api_field_core.GrpcService.Credentials.access_token:

access_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) OAuth2 access token, see
  https://grpc.io/grpc/cpp/namespacegrpc.html#ad3a80da696ffdaea943f0f858d7a360d.
  
  
  Precisely one of :ref:`access_token <envoy_api_field_core.GrpcService.Credentials.access_token>` must be set.
  


